--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
     "fabric": "^6.7.0",
+    "highlight.js": "^11.11.1",
     "leafer-ui": "^1.6.7",
     "next": "^15.2.3",
     "react": "^19.0.0",
