--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sortablejs": "^1.15.6",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/sortablejs": "^1.15.8",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "postcss": "^8.5.3",
